catalog/jenkins/kubernetes/jenkins-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: continuous-integration
        component: jenkins
        role: master
        release: stable      # stable, canary, alpha, beta, experimental, latest, debug
        environment: dev     # dev, staging, qa, production
        partition: all       # customer_1, customer_2, developer_1, beta_release
      annotations:
        pod.beta.kubernetes.io/init-containers: '[
          {
          "name": "chown",
            "image": "busybox",
            "imagePullPolicy": "IfNotPresent",
            "command": ["/bin/sh", "-c", "mkdir -p /var/jenkins_home && chown 1000:1000 /var/jenkins_home"],
            "securityContext": {
              "privileged": true
            }
          }
        ]'
    spec:
      containers:
      - name: master
        image: hbouvier/jenkins-kubernetes:2.32.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 50000
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        - mountPath: /var/run/docker.sock
          name: docker-socket
          readOnly: false
        resources:
          limits:
            cpu: 1
            memory: 1500Mi
          requests:
            cpu: 1m
            memory: 512Mi
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-home
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
