catalog/jenkins/kubernetes/jenkins-discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: continuous-integration
    component: jenkins
    role: load-balancer
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  clusterIP: None
  selector:
    app: continuous-integration
    component: jenkins
  ports:
  - port: 50000
    name: slaves
    protocol: TCP
    targetPort: 50000
