catalog/jenkins/kubernetes/jenkins-service.aws.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-cluster
  labels:
    app: continuous-integration
    component: jenkins
    role: load-balancer
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
  annotations:
    # AWS Managed cert ARN
    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:000000000000:certificate/00000000-0000-0000-0000-000000000000"
    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: LoadBalancer
  sessionAffinity: None
  selector:
    app: continuous-integration
    component: jenkins
    role: master
  ports:
  - port: 80          # use   443     if you use an SSL Cert managed by AWS
    name: http
    protocol: TCP
    targetPort: 8080
