catalog/jenkins/kubernetes/jenkins-service.minikube.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-cluster
  labels:
    app: continuous-integration
    component: jenkins
    role: load-balancer
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  selector:
    app: continuous-integration
    component: jenkins
    role: master
  ports:
  - name: http
    protocol: TCP
    port: 8080
