catalog/jenkins/kubernetes/jenkins-ingress.minikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # ingress.kubernetes.io/rewrite-target: /
  labels:
    app: continuous-integration
    component: jenkins
    role: jenkins-ingress
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: jenkins.cluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-cluster
          servicePort: 8080
